chat animation modify

--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Settings | kakao Clone</title>
+    <title>Chat | kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/76a0a06478.js"
       crossorigin="anonymous"
@@ -52,7 +52,7 @@
           <span class="chatings__timestamp-text">Friday, January 11, 2019</span>
         </div>
         <li class="chatings__message-left chating">
-          <img class="s-avatar friend__avatar" src="images/fall.jpg" />
+          <img class="s-avatar friend__avatar chating__avatar" src="images/fall.jpg" />
           <div class="chating__column">
             <span class="chating__id">autumncloud.sy</span>
             <div class="chating__message">
@@ -68,7 +68,7 @@
           </div>
         </li>
         <li class="chatings__message-left chating">
-          <img class="s-avatar friend__avatar" src="images/fall.jpg" />
+          <img class="s-avatar friend__avatar chating__avatar" src="images/fall.jpg" />
           <div class="chating__column">
             <span class="chating__id">autumncloud.sy</span>
             <div class="chating__message">
